# cxx-project

./: .gitignore  CMakeLists.txt  README.md  build.py  build.sh  buildall.sh  cleanup.sh  gen-clistfiles.py  gen-cmake.py  gen-cmakelists.py  libs.txt
.github/workflows/: build-and-test.yml  codecov  codecov.yml  codecov2.yml  main.yml
source/: CMakeLists.txt
source/cxx-project/core/: core.h  main.cpp
source/template-project/: CMakeLists.txt
source/template-project/core/: CMakeLists.txt  core.h  main.cpp
source/template-project/unittests/: CMakeLists.txt  test.cpp
source/test/unittests/: CMakeLists.txt  test.cpp
tools/: deps.txt  gen-cmake.py  libs.txt
